[gd_scene load_steps=13 format=3 uid="uid://b84addqgr56i6"]

[ext_resource type="Script" uid="uid://bhauku0q2ty4h" path="res://controls/boss_selection.gd" id="1_vx0fa"]
[ext_resource type="Texture2D" uid="uid://b1syvj2plvdoi" path="res://sprites/boss/ChatGPT Image 29. Apr. 2025, 10_55_25.png" id="2_vx0fa"]
[ext_resource type="Script" uid="uid://dqgyvg671o5at" path="res://controls/barbariankingbutton.gd" id="3_qarfj"]
[ext_resource type="Texture2D" uid="uid://nuw6x3vh1l2d" path="res://sprites/heroes/firemage/ChatGPT Image 27. Apr. 2025, 18_15_32.png" id="4_q3l6o"]
[ext_resource type="Script" uid="uid://d0tio686tnbku" path="res://controls/Pyromancerbutton.gd" id="4_qarfj"]
[ext_resource type="Texture2D" uid="uid://sydnsygj4lac" path="res://sprites/boss/Pyromance/Magiebegabter mit leuchtender Kugel.png" id="4_sok70"]
[ext_resource type="Texture2D" uid="uid://dehyssmuaykmw" path="res://sprites/boss/Wolfsalpha/20250615_1309_Ferocious Wolf Emblem_remix_01jxsmdstbec8vcgd095syyyc4.png" id="6_2w3tt"]
[ext_resource type="Script" uid="uid://c3ywt2o0k8rad" path="res://controls/wolfsalphabutton.gd" id="6_q3l6o"]
[ext_resource type="Script" uid="uid://dc7yd1qoa1ni8" path="res://controls/bauerbutton.gd" id="8_my7pk"]
[ext_resource type="Script" uid="uid://ctu6crcfcq5t1" path="res://controls/hexebutton.gd" id="8_sv02o"]
[ext_resource type="Texture2D" uid="uid://v1y3pf5o06gk" path="res://sprites/Control/20250615_1251_Run Button Medieval_simple_compose_01jxskbprvfv990ag358p73pwj.png" id="9_2w3tt"]
[ext_resource type="Script" uid="uid://ojdnv7fbj7a1" path="res://controls/grizzlybutton.gd" id="10_h415e"]

[node name="BossSelection" type="Node2D"]
script = ExtResource("1_vx0fa")

[node name="Auswahlobjekte" type="HBoxContainer" parent="."]
z_index = 1
offset_left = 400.0
offset_top = 150.0
offset_right = 3504.0
offset_bottom = 1694.0
scale = Vector2(0.1, 0.1)

[node name="Barbarianking" type="Button" parent="Auswahlobjekte"]
layout_mode = 2
icon = ExtResource("2_vx0fa")
script = ExtResource("3_qarfj")

[node name="Pyromancer" type="Button" parent="Auswahlobjekte"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("4_sok70")
script = ExtResource("4_qarfj")

[node name="Wolfsalpha" type="Button" parent="Auswahlobjekte"]
layout_mode = 2
icon = ExtResource("6_2w3tt")
script = ExtResource("6_q3l6o")

[node name="Bauer" type="Button" parent="Auswahlobjekte"]
layout_mode = 2
script = ExtResource("8_my7pk")

[node name="Hexe" type="Button" parent="Auswahlobjekte"]
layout_mode = 2
script = ExtResource("8_sv02o")

[node name="Grizzly" type="Button" parent="Auswahlobjekte"]
layout_mode = 2
script = ExtResource("10_h415e")

[node name="Überschrift" type="Label" parent="."]
offset_left = 395.0
offset_top = 92.0
offset_right = 798.0
offset_bottom = 147.0
text = "Gegen welchen Boss möchtest du spielen?"

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(573, 327)
scale = Vector2(0.749674, 0.634277)
texture = ExtResource("4_q3l6o")

[node name="Run (easy)" type="Button" parent="."]
offset_left = 283.0
offset_top = 337.0
offset_right = 1315.0
offset_bottom = 1360.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("9_2w3tt")

[connection signal="pressed" from="Auswahlobjekte/Barbarianking" to="." method="_on_barbarianking_pressed"]
[connection signal="pressed" from="Auswahlobjekte/Pyromancer" to="." method="_on_pyromancer_pressed"]
[connection signal="pressed" from="Auswahlobjekte/Wolfsalpha" to="." method="_on_wolfsalpha_pressed"]
[connection signal="pressed" from="Run (easy)" to="." method="_on_run_easy_pressed"]
